--- a/svelte-nonote/static/global.css
+++ b/svelte-nonote/static/global.css
@@ -1,5 +1,11 @@
-body {
+html,
+body,
+#sapper {
+	height: 100%;
 	margin: 0;
+}
+
+body {
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
