--- a/svelte-nonote/static/global.css
+++ b/svelte-nonote/static/global.css
@@ -1,28 +1,31 @@
-html,
-body,
-#sapper {
+html {
 	height: 100%;
+	width: 100%;
 	margin: 0;
 }
 
 body {
-	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	height: 100%;
+	min-height: 100%;
+	min-width: 100%;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
 	color: #333;
 }
 
-a {
-	color: inherit;
+#sapper {
+	min-height: 100%;
+	margin: 0;
+	display: flex;
+	flex-flow: column;
+	align-items: stretch;
+	justify-content: flex-start;
 }
 
-code {
-	font-family: menlo, inconsolata, monospace;
-	font-size: calc(1em - 2px);
-	color: #555;
-	background-color: #f0f0f0;
-	padding: 0.2em 0.4em;
-	border-radius: 2px;
+a {
+	color: inherit;
 }
 
 @media (min-width: 400px) {
